--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <title>Secure U District </title>
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">    
     <!-- normalize.css for cross-browser stuff -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <main>
-
+    
 </main>
