--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-  <title>Secure U District </title>
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">    
-    <!-- normalize.css for cross-browser stuff -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="author" content="e-safety">
+    <meta name="description" content="Secure U District Web App">
+    <title>Secure U District</title>
+    <link href="css/style.css" rel="stylesheet">
 </head>
-<main>
-    
-</main>
+
+<body>
+    <main>
+        <h1>Secure U District</h1>
+    </main>
+</body>
